Fix icon alignment

--- a/stylesheets/theme.css
+++ b/stylesheets/theme.css
@@ -1083,7 +1083,6 @@ a.btn-white:focus {
 
 .lightbox-wrapper .fa-search {
     padding: 0;
-    padding-left: 24px;
     padding-top: 24px;
     font-size: 60px;
     color: #FFF;
